test/types/scalar/diten/floatingPointBadSize.chpl
var x: real(27);

writeln(x);
